# razorforge-lang

./: Parser.cs  README.md  RazorForge.csproj  RazorForge.sln  Tokenizer.cs
native/: CMakeLists.txt  build.sh
native/inteldecimal/: CMakeLists.txt
native/libbf/: CMakeLists.txt
native/libtommath/: CMakeLists.txt
native/mapm/: CMakeLists.txt
razorforge_minimal_implementation/: types.h
src/Lexer/: LexerException.cs  Token.cs  TokenType.cs  Tokenizer.cs
stdlib/ErrorHandling/: Crashable.rf
stdlib/NativeDataTypes/: bool.rf  d32.rf  f128.rf  f16.rf  f32.rf  f64.rf  s128.rf  s32.rf  s64.rf  s8.rf  u128.rf  u16.rf  u32.rf  u64.rf  u8.rf
stdlib/Text/: letter.rf  letter16.rf  letter8.rf
stdlib/memory/: Hijacked.rf  RefCountController.rf  Shared.rf  ThreadShared.rf  ThreadWatched.rf  Watched.rf
